--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -28,6 +28,24 @@ user.resources.view.helperPath.Zend_View_Helper = APPLICATION_PATH "/modules/adm
 resources.frontController.params.prefixDefaultModule = "1"
 resources.frontController.moduleDirectory = APPLICATION_PATH "/modules"
 
+
+; in application.ini
+resources.mail.transport.type = smtp
+resources.mail.transport.host = "smtp.gmail.com"
+resources.mail.transport.auth = login
+resources.mail.transport.ssl = ssl
+resources.mail.transport.port = 465
+; the following could also be a gmail account
+resources.mail.transport.username = noreply@skyseek.com
+resources.mail.transport.password = YellowDog23
+resources.mail.transport.register = true
+; the following account needs to be linked to your above account
+resources.mail.defaultFrom.email = noreply@skyseek.com
+resources.mail.defaultFrom.name = "Notifications"
+resources.mail.defaultReplyTo.email = noreply@skyseek.com
+resources.mail.defaultReplyTo.name = "Notifications"
+
+
 ;Database
 resources.db.adapter = "pdo_mysql"
 resources.db.params.dbname = "gtw"
