--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -36,13 +36,13 @@ resources.mail.transport.auth = login
 resources.mail.transport.ssl = ssl
 resources.mail.transport.port = 465
 ; the following could also be a gmail account
-resources.mail.transport.username = noreply@skyseek.com
-resources.mail.transport.password = YellowDog23
+resources.mail.transport.username = noreply@givetowin.org
+resources.mail.transport.password = 4pp13p13
 resources.mail.transport.register = true
 ; the following account needs to be linked to your above account
-resources.mail.defaultFrom.email = noreply@skyseek.com
+resources.mail.defaultFrom.email = admin@givetowin.org
 resources.mail.defaultFrom.name = "Notifications"
-resources.mail.defaultReplyTo.email = noreply@skyseek.com
+resources.mail.defaultReplyTo.email = noreply@givetowin.org
 resources.mail.defaultReplyTo.name = "Notifications"
 
 
